improved ui, but search still not functioning

--- a/Catalog2.Api/wwwroot/index.html
+++ b/Catalog2.Api/wwwroot/index.html
@@ -15,7 +15,6 @@
         font-family: Century;
         font-weight: bold;
         background-color:  rgb(177, 136, 82) ;
-        padding: 2px;
         align-items: center;  
         overflow: hidden; 
         z-index: 99;
@@ -54,7 +53,7 @@
             }
       </script>
     <a href="#"><i class="fa fa-fw fa-home"></i> Home</a>
-    <a href="profiles"><i class="fa fa-fw fa-profiles"></i> Add Profiles</a>
+    <a href="#"><i class="fa fa-fw fa-profiles"></i> Add Profiles</a>
     <a href="#"><i class="fa fa-fw fa-search"></i> Search Profiles</a>
     <a><input type="text" id="searchTerm" onsubmit="searchItems()" placeholder="Search Site" title="Search Profiles">
       <input type="submit" value="Search"></a>
@@ -72,7 +71,7 @@
       <div class="column">
         <div class="slideshow-container fade">
            <div class="Containers">
-               <img src="https://scontent-ord5-1.xx.fbcdn.net/v/t39.30808-6/277356646_387875450006794_4640110630008392245_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=730e14&_nc_ohc=zfIlSsWIMUgAX-9r6Dx&_nc_ht=scontent-ord5-1.xx&oh=00_AT-Viw45YFdl4_WZOqqCtsHTOY_TKGKeJLBbbTYAqQJoRw&oe=634BED22" width="500px" height="350">
+               <img src="nana.jpg" width="500px" height="350">
            </div>
            <div class="Containers">
                <img src="https://scontent-ord5-1.xx.fbcdn.net/v/t1.6435-9/36352718_1995044037232485_1041754732940492800_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=730e14&_nc_ohc=nP2sLhRCg_IAX8CvAK9&_nc_ht=scontent-ord5-1.xx&oh=00_AT-2K_WIbnRE9L_lcFvyqqhAzk_MaGkYDH_lsfAhUa3h2A&oe=636C5A6E" width="500px" height="350">
